k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chainlit-app
  namespace: sentinel-mind
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chainlit
  template:
    metadata:
      labels:
        app: chainlit
    spec:
      containers:
        - name: chainlit-app
          image: 442426895473.dkr.ecr.us-east-1.amazonaws.com/sentinelmind/chainlit:c55ba59-2025-07-11
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: chainlit-llm-config-volume
              mountPath: /app/config.yaml
              subPath: config.yaml
            - name: chainlit-secrets-volume
              mountPath: /app/secrets.yaml
              subPath: secrets.yaml
      volumes:
        - name: chainlit-llm-config-volume
          configMap:
            name: chainlit-llm-config
        - name: chainlit-secrets-volume
          secret:
            secretName: chainlit-secrets
