k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chainlit-app-ingress
  namespace: sentinel-mind
  annotations:
    cert-manager.io/issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  rules:
    - host: sentinel-mind.sflabs.ustpace.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chainlit-app-service
                port:
                  number: 80
  tls:
    - hosts:
        - sentinel-mind.sflabs.ustpace.com
      secretName: chainlit-tls
